@@ -1,4 +1,4 @@
-#	$Id: GMT_progs_files_ascii.lis,v 1.58 2008-12-06 03:17:42 guru Exp $
+#	$Id: GMT_progs_files_ascii.lis,v 1.59 2008-12-12 18:31:31 guru Exp $
 #
 # GMT_progs_files_ascii.lis contains all the ascii files that should go into the
 # GMT_src tar/zip files.  See GMT_progs_files_bin.lis for binary files.
@@ -91,6 +91,7 @@ src/gmt_agc_io.c
 src/gmt_nc.c
 src/gmt_plot.c
 src/gmt_proj.c
+src/gmt_qsort.c
 src/gmt_shore.c
 src/gmt_stat.c
 src/gmt_support.c
